update styles to stop gallery text overflow on handhelds

--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -230,6 +230,7 @@
   .page-id-27 .images-column {
     clear: both;
     padding-top: 17px;
+    width: 300px;
 
     text-align: left;
   }
