--- a/css-build/style.css
+++ b/css-build/style.css
@@ -813,6 +813,7 @@ a.map-link:visited {
   .page-id-27 .images-column {
     clear: both;
     padding-top: 17px;
+    width: 300px;
     text-align: left;
   }
 }
